<resources>
    <string name="app_name">RUDF Contact</string>
    <string name="prompt_email"> Enter Email</string>
    <string name="prompt_password">Enter Mobile</string>
    <string name="action_sign_in">Login</string>
    <string name="title_about_app">About</string>
    <string name="title_about">About RUDF</string>
    <string name="check_new_update">Check new update</string>
    <string name="check_new_update_error">Please connect to network</string>
    <string name="share">Share</string>
    <string name="msg_share">RUDF Contact APP Download Link\n\n</string>
    <string name="call_toast">Call app opening</string>
    <string name="email_toast">Email app opening</string>
    <string name="other_link_open">Opening your browser</string>
    <string name="facebook_view">Facebook Profile opening</string>
    <string name="not_fb"> Facebook app not installed </string>
    <string name="connect_net"> Network Disconnected </string>
    <string name="commingsoon">Sorry, Not yet added </string>
    <string name="fb_grp"> Turn on mobile data or Wi-Fi to access our Facebook group </string>
    <string name="fb_pro"> Turn on mobile data or Wi-Fi to access the Facebook profile. </string>
    <string name="email_dialog"> Turn on mobile data or Wi-Fi for e-mail. </string>
    <string name="navigation_drawer_close"> Close </string>
    <string name="navigation_drawer_open"> Open </string>
    <string name="ExecutiveMember"> Executive Member </string>
    <string name="GeneralMember"> General Member </string>
    <string name="AdviserMember"> Adviser </string>
    <string name="AlumniMember"> Alumni Member </string>
    <string name="home"> RUDF Contact </string>
    <string name="home_nav"> Home </string>
    <string name="FacebookGroup"> Facebook Group </string>
    <string name="FacebookPage"> Facebook Page</string>
    <string name="information">Informations</string>
    <string name="facebook">Facebook</string>
    <string name="others">Others</string>
    <string name="rudf_title">Rajshahi University Debating Forum (RUDF)</string>
    <string name="ru_name">University of Rajshahi</string>
    <string name="msg_feedback">Dear Developer,\n\n\n\n\n\n\n Best regards,</string>
    <string name="notifications">Notifications</string>
    <string name="app_download_link">https://bit.ly/rudfapp</string>
    <string name="feedbackMail">astanim.3221@gmail.com</string>
    <string name="feedbacksub">RUDF Contact Feedback</string>
    <string name="feedTitle">Feedback</string>
    <string name="misson">Mission</string>
    <string name="misson_details">Express Yourself - it is the slogan of this organization. Through debating, creating knowledgeable, self-oriented, confident, patriotic manpower is the main mission.</string>
    <string name="Overview">Organization Overview</string>
    <string name="Overview_details">Its the premium debating organization of the University of Rajshahi RUDF is the only debating forum of Business Studies Faculty in Rajshahi University which was formed on February 6, 2008 by some energetic, talented and up-to-date students of Business Studies Faculty. It is only a debating forum that is representing our Business Studies Faculty to the others university in Bangladesh. It is totally a non-political forum wants to make us a perfect, logical and relevant person.</string>
    <string name="Information">General Information</string>
    <string name="Information_details">RUDF is nationally renowned debating forum. It is continuously working for the development of the students. For celebrating its 1st Anniversary in 2009, it organized the largest ever event of RU, the Career Planning Seminar. In its 2nd Anniversary in 2010 we organized National Debate Championship first time in RU. Now it is the time to celebrate its 3rd Anniversary with the 1st National Debate Festival in 2011.</string>

    <string name="Date_details">Estd: February 6, 2008</string>


    <string name="Number_details">Mobile: 01786-387816\nEmail: rudf.ru.bd@gmail.com</string>
    <string name="app_about_details">This Android app contains phone numbers, blood groups, department, hall and email addresses of RUDF members, alumnus and advisers. Anyone can find contacts of a person by searching or by navigating through the listings and can call or email him/her directly from this app. If any new or updated information is available, update notification will automatically be showed when the phone is connected to the Internet.\n\nPlease share your comments or suggestions to improve this app further.</string>
    <string name="initiative_app">An Initiative by RUDF</string>
    <string name="about_dev">Saklayen Ahmed\nDepartment of Accounting and Information Systems\nUniversity of Rajshshi.</string>
    <string name="dev_email">Email\nrudf.ru.bd@gmail.com</string>
    <string name="dev_title">Developer</string>
    <string name="mypro">My Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_rudf_contact">Welcome to RUDF Contact</string>
    <string name="informations_home">Informations</string>

</resources>
