<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" />

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home_nav" />

    <item android:title="@string/information">
        <menu>
            <item
                android:id="@+id/adviser"
                android:icon="@drawable/ic_adviser"
                android:title="@string/AdviserMember" />
            <item
                android:id="@+id/alumni"
                android:icon="@drawable/ic_alumni"
                android:title="@string/AlumniMember" />

            <item
                android:id="@+id/ExecutiveMember"
                android:icon="@drawable/ic_supervisor"
                android:title="@string/ExecutiveMember" />

            <item
                android:id="@+id/GeneralMember"
                android:icon="@drawable/ic_general"
                android:title="@string/GeneralMember" />

           </menu>
    </item>

    <item android:title="@string/facebook">
        <menu>

            <item
                android:id="@+id/FacebookPage"
                android:icon="@drawable/ic_facebook"
                android:title="@string/FacebookPage" />
            <item
                android:id="@+id/FacebookGroup"
                android:icon="@drawable/ic_facebook"
                android:title="@string/FacebookGroup" />
        </menu>
    </item>
            <item android:title="@string/others">
            <menu>
                <item
                    android:id="@+id/Notification"
                    android:icon="@drawable/ic_notifications"
                    android:title="@string/notifications" />
            <item
                android:id="@+id/nav_update"
                android:icon="@drawable/ic_update"
                android:title="@string/check_new_update" />

                <item
                    android:id="@+id/nav_feedback"
                    android:icon="@drawable/ic_feedback"
                    android:title="Feedback" />
                <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
            <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_info"
                    android:title="@string/title_about" />
        </menu>
    </item>

</menu>
