<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.androiddeft.firebasepushnotification.Home">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/ActionBar.title"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="center|bottom"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16sp"
                android:layout_marginVertical="16sp"
                android:gravity="bottom|center_horizontal"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                app:layout_collapseMode="parallax" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:padding="150dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:alpha=".3"
                android:src="@drawable/rudf_text"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:title="@string/app_name"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#F0F0F0">

            <TableLayout
                android:id="@+id/tablelayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:stretchColumns="1">


                <TableRow
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">

                    <TextView
                        android:onClick="Profile"
                        style="@style/AppTheme.ButtonMargin"
                        android:layout_width="0dip"
                        android:textColor="@color/colorPrimary"
                        android:layout_height="100dp"
                        android:drawableTop="@drawable/ic_account_black"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/my_profile" />

                    <TextView
                        android:id="@+id/adviser"
                        style="@style/AppTheme.ButtonMargin"
                        android:layout_width="0dip"
                        android:layout_height="100dp"
                        android:drawableTop="@drawable/ic_adviser"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/AdviserMember" />

                </TableRow>

                <TableRow
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/alumni"
                        style="@style/AppTheme.ButtonMargin"
                        android:layout_width="0dip"
                        android:layout_height="100dp"
                        android:drawableTop="@drawable/ic_alumni"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/AlumniMember" />

                    <TextView
                        android:id="@+id/executive"
                        style="@style/AppTheme.ButtonMargin"
                        android:layout_width="0dip"
                        android:layout_height="100dp"
                        android:drawableTop="@drawable/ic_supervisor"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/ExecutiveMember" />


                </TableRow>

                <TableRow
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/general"
                        style="@style/AppTheme.ButtonMargin"
                        android:layout_width="0dip"
                        android:layout_height="100dp"
                        android:drawableTop="@drawable/ic_general"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/GeneralMember" />

                    <TextView
                        android:id="@+id/notification"
                        style="@style/AppTheme.ButtonMargin"
                        android:layout_width="0dip"
                        android:layout_height="100dp"
                        android:drawableTop="@drawable/ic_notifications"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/notifications" />

                </TableRow>

                <TableRow
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/about"
                        style="@style/AppTheme.ButtonMargin"
                        android:layout_width="0dip"
                        android:onClick="About"
                        android:layout_height="100dp"
                        android:drawableTop="@drawable/ic_info"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/title_about" />

                    <TextView


                        style="@style/AppTheme.ButtonMargin"
                        android:layout_width="0dip"
                        android:layout_height="100dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"

                        />


                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/checkNew"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />
        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
