<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:adjustViewBounds="true"
    android:scaleType="fitCenter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">


             <ImageView
                 android:layout_width="45dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
                 android:adjustViewBounds="true"
                 android:scaleType="fitCenter"
                 android:src="@drawable/rudf" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp"
                android:textSize="20dp"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:text="@string/welcome_to_rudf_contact" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginVertical="16dp"
                android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/editTextUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/prompt_password"
                    android:imeOptions="actionUnspecified"
                    android:inputType="numberPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:targetApi="o" />

            </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <TableLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="30dp"
                android:stretchColumns="1">

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                    <Button
                        android:id="@+id/buttonLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:text="@string/action_sign_in"
                        android:textColor="@android:color/white"
                        android:textSize="15dp" />

                    <ProgressBar
                        android:visibility="gone"
                        android:id="@+id/progressBar"
                        android:layout_gravity="right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true" />
                </TableRow>

            </TableLayout>


            <Button
                android:id="@+id/checkNew"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>