<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:orientation="vertical"
            android:paddingBottom="3dp">

            <TextView
                android:id="@+id/about_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:paddingVertical="5dp"
                android:textSize="17dp"
                android:text="@string/rudf_title"
                android:textColor="@color/colorAccent" />

            <ImageView
                android:layout_width="41dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="6dp"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/rudf" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="5dp"
                android:text="@string/Date_details"
                android:textColor="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"

                android:layout_marginVertical="8dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/my_profile"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:textSize="17dp" />

            <LinearLayout
                android:id="@+id/adviser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"

                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginVertical="6dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:padding="@dimen/Icon_padding"
                    android:src="@drawable/ic_account_black"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:id="@+id/name"
                    android:textColor="@color/header_bg"
                    android:textSize="15dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"

                android:background="#dddddd" />

            <LinearLayout
                android:id="@+id/alumni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"

                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginVertical="6dp"
                    android:layout_marginLeft="10dp"

                    android:gravity="center"
                    android:padding="@dimen/Icon_padding"
                    android:src="@drawable/ic_alumni"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:id="@+id/department"
                    android:textColor="@color/header_bg"
                    android:textSize="15dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"

                android:background="#dddddd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_weight="0"

                android:gravity="center"

                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginVertical="6dp"
                    android:layout_marginLeft="10dp"

                    android:gravity="center"
                    android:padding="@dimen/Icon_padding"
                    android:src="@drawable/ic_session"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:id="@+id/session"
                    android:textColor="@color/header_bg"
                    android:textSize="15dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"

                android:background="#dddddd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_weight="0"
                android:gravity="center"

                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginVertical="6dp"
                    android:layout_marginLeft="10dp"

                    android:gravity="center"
                    android:padding="@dimen/Icon_padding"
                    android:src="@drawable/ic_email"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:id="@+id/email"
                    android:textColor="@color/header_bg"
                    android:textSize="15dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"

                android:background="#dddddd" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_weight="0"

                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginVertical="6dp"
                    android:layout_marginLeft="10dp"

                    android:gravity="center"
                    android:padding="@dimen/Icon_padding"
                    android:src="@drawable/ic_desig"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:id="@+id/position"
                    android:textColor="@color/header_bg"
                    android:textSize="15dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"

                android:background="#dddddd" />

            <Button
                android:layout_width="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@android:color/white"
                android:text="@string/logout"
                android:backgroundTint="@color/colorPrimary"
                android:id="@+id/buttonLogout">

            </Button>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>